  * TimeLog:
    * Update: TimeLog instances will expand Task.schedule_timing value
      automatically if the total amount of logged time is more than the
      schedule_timing value.
    * Update: TimeLogs are now considered while scheduling the task.
    * Fix: TimeLogs raises OverBookedError when appending the same TimeLog
      instance to the same resource.
* WebUI:
  * Update: Logged in work times will now be visible in gantt charts as a green
    bar in the TaskBar div.
  * Fix: The working hours were not correctly passed to the studio instance
    in Studio creation.
  * Fix: "Append User Dialog" is now working properly.
  * Update: Department menus under 'Crew' menu are now showing the department
    users.
  * Update: Color choosers in "Create Status Dialog" now have colors picked by default
    for BG and FG colors.
  * Update: Combined ``user_create_dialog`` and ``user_update_dialog`` into one.
  * Update: Replaced DataGrid objects with dgrid.
  * Update: Added navigation bar for assets, shots, sequences.
  * Update: Combined ``project_create_dialog`` and ``project_update_dialog`` into one.
  * Fix: Updating a project now correctly refreshes the ``project_summary``
    content pane.
  * Fix: ``user_create_dialog`` now shows and updates groups.
* jQueryGantt:
  * Update: Replaced the ``duration`` column with ``timing`` which correctly
    shows the schedule timing info of the related task.
  * Fix: The ``depends`` column shows the dependent task names correctly.

0.2.0.b1
--------

* WorkingHours.is_working_hour() is working now.
* WorkingHours class is moved from stalker.models.project to
  stalker.models.studio module.
* ``daily_working_hours`` attribute is moved from
  stalker.models.project.Project to stalker.models.studio.Studio class.
* Repository path variables now ends with a forward slash even if it is not
  given.
* Updated Project classes validation messages to correlate with Stalker
  standard.