@@ -40,12 +40,19 @@
     <link rel=stylesheet
           href='{{ request.static_url("stalker:static/jQueryGantt/css/gantt.css") }}'
           type="text/css">
+    <link rel=stylesheet
+          href='{{ request.static_url("stalker:static/Fixed-Header-Table/css/defaultTheme.css") }}'
+          type="text/css">
+
     
     <script src='{{ request.static_url("stalker:static/jquery/1.7/jquery.min.js") }}'></script>
     <script src='{{ request.static_url("stalker:static/jqueryui/1.8/jquery-ui.min.js") }}'></script>
     {#  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>#}
     {#  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>#}
     
+    {# FIXED TABLE HEADER #}
+    <script src='{{ request.static_url("stalker:static/Fixed-Header-Table/jquery.fixedheadertable.min.js") }}'></script>
+
     <script src='{{ request.static_url("stalker:static/jQueryGantt/libs/jquery.livequery.min.js") }}'></script>
     <script src='{{ request.static_url("stalker:static/jQueryGantt/libs/jquery.timers.js") }}'></script>
     <script src='{{ request.static_url("stalker:static/jQueryGantt/libs/platform.js") }}'></script>
